--- a/gb/23/8/26/n14061513.md
+++ b/gb/23/8/26/n14061513.md
@@ -5,51 +5,49 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061521-liam-first-day-8-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2023年08月26日讯】（英文大纪元<ahref="https://www.theepochtimes.com/bright/young-son-of-fallen-officer-sent-off-by-police-family-before-his-big-first-day-of-kindergarten-5478987">Epoch Inspired Staff</a>报导／张雨霏编译）日前，美国路易斯安那州一名殉职警员的幼子迎来第一天上幼儿园的重要日子，令人欣慰的是，他父亲生前的许多同事亲自开警车到他家门口接他，并准备一路护送他到学校，场面相当感人。</p>
+	<p>【大纪元2023年08月26日讯】（英文大纪元<ahref="https://www.theepochtimes.com/bright/young-son-of-fallen-officer-sent-off-by-police-family-before-his-big-first-day-of-kindergarten-5478987" rel="nofollow noopener noreferrer">Epoch Inspired Staff</a>报导／张雨霏编译）日前，美国路易斯安那州一名殉职警员的幼子迎来第一天上幼儿园的重要日子，令人欣慰的是，他父亲生前的许多同事亲自开警车到他家门口接他，并准备一路护送他到学校，场面相当感人。</p>
 <p>从8月17日在现场拍摄的一系列照片中可见，年幼的利亚姆?凯利（Liam Kelly）背着书包，在大批警察的列队护送下，正高高兴兴地准备去幼儿园。</p>
-<figure id="attachment_14061522" aria-describedby="caption-attachment-14061522" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061522-liam-first-day-1-copy.jpeg"><img decoding="async" class=" wp-image-14061522" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061522-liam-first-day-1-copy.jpeg" alt="" width="598" b="447" /></a><figcaption id="caption-attachment-14061522" class="wp-caption-text">年幼的利亚姆在大批警察的列队护送下，正高高兴兴地准备去幼儿园。（德纳姆斯普林斯警察局提供）</figcaption></figure>
+<figure id="attachment_14061522" aria-describedby="caption-attachment-14061522" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061522-liam-first-day-1-copy.jpeg" rel="nofollow"><img decoding="async" class=" wp-image-14061522" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061522-liam-first-day-1-copy.jpeg" alt="" width="598" b="447"></a><figcaption id="caption-attachment-14061522" class="wp-caption-text">年幼的利亚姆在大批警察的列队护送下，正高高兴兴地准备去幼儿园。（德纳姆斯普林斯警察局提供）</figcaption></figure>
 <p>其中一张照片显示，在母亲的陪伴下，小利亚姆坐在县治安官的摩托车上，两侧的警察都面带微笑。</p>
-<p>德纳姆斯普林斯警察局（Denham Springs Police Department，简称DSPD）在<ahref="https://www.facebook.com/100064573244497/posts/682204273942008">脸书</a>上分享了利亚姆苦乐参半的照片纪录，首次上学对这个小男孩来说是一个重要里程碑，但他已故的父亲肖恩?凯利（Shawn Kelly）警士却无法陪在他身边亲眼见证这一特殊时刻。</p>
-<figure id="attachment_14061519" aria-describedby="caption-attachment-14061519" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061519-liam-first-day-1.jpg"><img decoding="async" class=" wp-image-14061519" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061519-liam-first-day-1.jpg" alt="" width="600" b="360" /></a><figcaption id="caption-attachment-14061519" class="wp-caption-text">（德纳姆斯普林斯警察局提供）</figcaption></figure>
+<p>德纳姆斯普林斯警察局（Denham Springs Police Department，简称DSPD）在<ahref="https://www.facebook.com/100064573244497/posts/682204273942008" rel="nofollow noopener noreferrer">脸书</a>上分享了利亚姆苦乐参半的照片纪录，首次上学对这个小男孩来说是一个重要里程碑，但他已故的父亲肖恩?凯利（Shawn Kelly）警士却无法陪在他身边亲眼见证这一特殊时刻。</p>
+<figure id="attachment_14061519" aria-describedby="caption-attachment-14061519" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061519-liam-first-day-1.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14061519" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061519-liam-first-day-1.jpg" alt="" width="600" b="360"></a><figcaption id="caption-attachment-14061519" class="wp-caption-text">（德纳姆斯普林斯警察局提供）</figcaption></figure>
 <p>该部门在帖文中郑重写道：“我们的警察兄弟、肖恩?凯利警士（今年6月不幸离世）他的儿子利亚姆今天开始上幼儿园啦！一定会感到非常自豪。”</p>
 <p>“我们想让他知道他的‘警察大家庭’是多么的支持他，我们也很荣幸能够帮助确保利亚姆的首次上学日特别而又难忘。”</p>
 <p>凯利警士于1994年在路易斯安那州惩教局开启了他的执法职业生涯。随后，他于2019年加入德纳姆斯普林斯警察局，担任泰瑟枪教练和现场训练官。</p>
-<figure id="attachment_14061521" aria-describedby="caption-attachment-14061521" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061521-liam-first-day-8.jpg"><img decoding="async" class=" wp-image-14061521" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061521-liam-first-day-8.jpg" alt="" width="600" b="360" /></a><figcaption id="caption-attachment-14061521" class="wp-caption-text">（德纳姆斯普林斯警察局提供）</figcaption></figure>
-<p>据<ahref="https://www.foxcarolina.com/2023/08/18/fallen-officers-department-shows-up-celebrate-his-sons-first-day-kindergarten/">福克斯新闻</a>报导，2023年5月11日，有人报警称一名男子与一名不认识的女子在购物中心的停车场发生争执，凯利刚好被派往现场处理。没想到，凯利刚抵达停车场，嫌疑人便从他的车里直接朝凯利连开数枪。不幸的是，这名警官于6月2日在医院因伤重不治身亡。</p>
+<figure id="attachment_14061521" aria-describedby="caption-attachment-14061521" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061521-liam-first-day-8.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14061521" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061521-liam-first-day-8.jpg" alt="" width="600" b="360"></a><figcaption id="caption-attachment-14061521" class="wp-caption-text">（德纳姆斯普林斯警察局提供）</figcaption></figure>
+<p>据<ahref="https://www.foxcarolina.com/2023/08/18/fallen-officers-department-shows-up-celebrate-his-sons-first-day-kindergarten/" rel="nofollow noopener noreferrer">福克斯新闻</a>报导，2023年5月11日，有人报警称一名男子与一名不认识的女子在购物中心的停车场发生争执，凯利刚好被派往现场处理。没想到，凯利刚抵达停车场，嫌疑人便从他的车里直接朝凯利连开数枪。不幸的是，这名警官于6月2日在医院因伤重不治身亡。</p>
 <p>据报导，这名嫌疑人逃离现场后不久，被利文斯顿教区副警长开枪击毙。</p>
-<figure id="attachment_14061520" aria-describedby="caption-attachment-14061520" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061520-liam-first-day-1.jpg"><img decoding="async" class=" wp-image-14061520" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061520-liam-first-day-1.jpg" alt="" width="600" b="360" /></a><figcaption id="caption-attachment-14061520" class="wp-caption-text">利亚姆和母亲与大批警员合影。（德纳姆斯普林斯警察局提供）</figcaption></figure>
+<figure id="attachment_14061520" aria-describedby="caption-attachment-14061520" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/08/id14061520-liam-first-day-1.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14061520" src="https://i.epochtimes.com/assets/uploads/2023/08/id14061520-liam-first-day-1.jpg" alt="" width="600" b="360"></a><figcaption id="caption-attachment-14061520" class="wp-caption-text">利亚姆和母亲与大批警员合影。（德纳姆斯普林斯警察局提供）</figcaption></figure>
 <p>德纳姆斯普林斯警察局局长罗德尼?沃克（Rodney Walker）在6月4日的一份声明中表示，凯利警士是“一位优秀的公务员、一位了不起的父亲和丈夫，一位杰出的人。”◇</p>
 <p>责任编辑：韩玉#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/18/n12558366.md#1">12岁男孩为殉职英雄跑步筹款 获总统自由勋章</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/5/29/n12984134.md#1">父亲因公殉职 女生大学毕业礼收获意外惊喜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/7/n13560088.md#1">美国警察代殉职同事在婚礼上与其女儿共舞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/24/n13766394.md#1">南加州两警察遭枪杀 民众吁支持执法人员</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282416.md#1">【秦鹏观察】三大新闻事件背后 藏中共外交密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281757.md#1">【远见快评】“火箭军”又出大事 秦刚有下落？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281733.md#1">【秦鹏观察】中共央行借入国债 无锚印钞来了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278998.md#1">分析：台商撤离冲击中国经济 也令中共尴尬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280888.md#1">沈舟：中共海军急缺战列舰 但从未造过</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280385.md#1">《怪兽8号》影评：乱吃东西竟成当英雄的机遇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281728.md#1">被问赵又廷私下如何叫她 高圆圆回答笑翻全场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280722.md#1">空服员希望乘客在飞机上别做这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
-<hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/8/26/n14061513.htm">美警员因公殉职 大批同事代他送幼子上学</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/26/n14061513.htm">美警员因公殉职 大批同事代他送幼子上学</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/26/n14061513.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
